[gd_scene load_steps=9 format=3 uid="uid://bbmu6yclvk8ku"]

[ext_resource type="Texture2D" uid="uid://wxn8mx847ko6" path="res://assets/textures/canvas_texture_card.tres" id="1_4ay1m"]
[ext_resource type="Script" uid="uid://fa18qtpgr6qm" path="res://scripts/deck_base.gd" id="1_hh3f7"]
[ext_resource type="PackedScene" uid="uid://752707y07m4d" path="res://objects/node_clickbox_component.tscn" id="2_1ffgt"]
[ext_resource type="LabelSettings" uid="uid://bx0sh5hsc2175" path="res://assets/labels/ls_deck_counter.tres" id="2_csato"]
[ext_resource type="Script" uid="uid://bgux60h7d8wro" path="res://scripts/deck_counter_component.gd" id="3_7sfkq"]
[ext_resource type="Script" uid="uid://cjaexsyghgj4h" path="res://scripts/deck_input_component.gd" id="4_hh3f7"]
[ext_resource type="Script" uid="uid://f0eciu2k7kij" path="res://scripts/deck_spawn_component.gd" id="5_0lq5v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csato"]
size = Vector2(48, 64)

[node name="SquirrelsDeck" type="Node2D"]
script = ExtResource("1_hh3f7")
type = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4ay1m")
region_enabled = true
region_rect = Rect2(49, 0, 49, 64)

[node name="DeckCounterComponent" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -20.0
offset_right = 29.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
text = "0"
label_settings = ExtResource("2_csato")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_7sfkq")

[node name="DeckInputComponent" type="Node2D" parent="."]
script = ExtResource("4_hh3f7")

[node name="DeckSpawnComponent" type="Node2D" parent="."]
script = ExtResource("5_0lq5v")

[node name="ClickboxComponent" parent="." instance=ExtResource("2_1ffgt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickboxComponent"]
shape = SubResource("RectangleShape2D_csato")

[connection signal="ready" from="." to="." method="_start_fill"]
[connection signal="ready" from="." to="." method="_connect_signals"]
[connection signal="ready" from="DeckCounterComponent" to="DeckCounterComponent" method="_connect_signals"]
[connection signal="ready" from="DeckSpawnComponent" to="DeckSpawnComponent" method="_connect_signals"]
[connection signal="mouse_entered" from="ClickboxComponent" to="DeckInputComponent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickboxComponent" to="DeckInputComponent" method="_on_mouse_exited"]
[connection signal="mouse_left_button_clicked" from="ClickboxComponent" to="DeckInputComponent" method="_on_mouse_left_button_clicked"]
[connection signal="mouse_right_button_clicked" from="ClickboxComponent" to="DeckInputComponent" method="_on_mouse_right_button_clicked"]
